# how

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  SBOM.md  benchmark.sh
.github/workflows/: build.yml  release.yml
include/: ConfigManager.h  ContextGatherer.h  HistoryManager.h  LLMClient.h  PromptBuilder.h  Provider.h
man/: how.1
packaging/: INSTALL-linux.md  INSTALL-macos.md  postinst  postrm
scripts/: generate-sbom.py
src/: ConfigManager.cpp  ContextGatherer.cpp  HistoryManager.cpp  LLMClient.cpp  PromptBuilder.cpp  Provider.cpp  main.cpp
tests/: ConfigManagerTest.cpp  HistoryManagerTest.cpp
